WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
223985
[Cocoa] REGRESSION(
r272999
): User-installed fonts no longer work in Mail
https://bugs.webkit.org/show_bug.cgi?id=223985
Summary
[Cocoa] REGRESSION(r272999): User-installed fonts no longer work in Mail
Myles C. Maxfield
Reported
2021-03-31 00:06:06 PDT
[Cocoa] REGRESSION(
r272999
): User-installed fonts no longer work in Mail
Attachments
Needs a test
(2.60 KB, patch)
2021-03-31 00:07 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(5.14 KB, patch)
2021-03-31 01:11 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Patch
(9.80 KB, patch)
2021-03-31 23:08 PDT
,
Myles C. Maxfield
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Myles C. Maxfield
Comment 1
2021-03-31 00:07:20 PDT
Created
attachment 424738
[details]
Needs a test
Myles C. Maxfield
Comment 2
2021-03-31 00:08:05 PDT
<
rdar://problem/75975210
>
Myles C. Maxfield
Comment 3
2021-03-31 01:11:09 PDT
Created
attachment 424743
[details]
Patch
Myles C. Maxfield
Comment 4
2021-03-31 23:08:35 PDT
Created
attachment 424873
[details]
Patch
Per Arne Vollan
Comment 5
2021-04-01 10:03:36 PDT
Comment on
attachment 424873
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=424873&action=review
Thanks! R=me.
> Source/WebKit/WebProcess/WebPage/WebPage.h:-2275 > - > -#if HAVE(STATIC_FONT_REGISTRY) > - RefPtr<SandboxExtension> m_fontExtension; > -#endif
You may also be able to remove the font extension member in WebProcess, since you can consume the extension permanently.
Myles C. Maxfield
Comment 6
2021-04-01 11:14:35 PDT
(In reply to Per Arne Vollan from
comment #5
)
> Comment on
attachment 424873
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=424873&action=review
> > Thanks! R=me. > > > Source/WebKit/WebProcess/WebPage/WebPage.h:-2275 > > - > > -#if HAVE(STATIC_FONT_REGISTRY) > > - RefPtr<SandboxExtension> m_fontExtension; > > -#endif > > You may also be able to remove the font extension member in WebProcess, > since you can consume the extension permanently.
SandboxExtension's destructor actually explicitly makes sure that this doesn't happen.
EWS
Comment 7
2021-04-01 11:50:29 PDT
Committed
r275371
: <
https://commits.webkit.org/r275371
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 424873
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug