Source/WebKit/WebProcess/WebPage/WebPage.cpp
@@ -629,12 +629,8 @@ WebPage::WebPage(PageIdentifier pageID, WebPageCreationParameters&& parameters)
 #endif
 
 #if HAVE(STATIC_FONT_REGISTRY)
-    if (parameters.fontMachExtensionHandle) {
-        if ((m_fontExtension = SandboxExtension::create(WTFMove(*parameters.fontMachExtensionHandle)))) {
-            bool ok = m_fontExtension->consume();
-            ASSERT_UNUSED(ok, ok);
-        }
-    }
+    if (parameters.fontMachExtensionHandle)
+        WebProcess::singleton().switchFromStaticFontRegistryToUserFontRegistry(WTFMove(*parameters.fontMachExtensionHandle));
 #endif
 
     m_page = makeUnique<Page>(WTFMove(pageConfiguration));
@@ -1018,11 +1014,6 @@ WebPage::~WebPage()
         if (completionHandler)
             completionHandler(WTF::nullopt);
     }
-#endif
-
-#if HAVE(STATIC_FONT_REGISTRY)
-    if (m_fontExtension)
-        m_fontExtension->revoke();
 #endif
 }
 
