Source/WebKit/WebProcess/WebPage/WebPage.h
@@ -2269,10 +2269,6 @@ private:
 #if ENABLE(IMAGE_EXTRACTION)
     WeakHashSet<WebCore::Element> m_elementsWithExtractedImages;
 #endif
-
-#if HAVE(STATIC_FONT_REGISTRY)
-    RefPtr<SandboxExtension> m_fontExtension;
-#endif
 };
 
 #if !PLATFORM(IOS_FAMILY)
